--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer component{
+    .error-text{
+        @apply text-red-500 text-sm px-4 h-5
+    }
+}
